
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 unsigned long RET_ADDR ;
 int construct_document (int *,unsigned long) ;
 int * fopen (char*,char*) ;
 scalar_t__ memcmp (char*,char*,int ) ;
 int printf (char*,...) ;
 int strlen (char*) ;
 unsigned long strtoul (char*,int *,int ) ;

int main (int argc, char **argv)
{
        FILE *fp;
        unsigned long ret_addr = RET_ADDR;

        if (argc < 2) {
                printf("Usage: %s <filename> [-r 0xdeadbeef]\n", argv[0]);
                printf(" -r <retaddr>         (0x%x default)\n", ret_addr);
                return 0;
        }

        if (argc >= 4) {
                if (memcmp(argv[2], "-r", strlen(argv[2]))==0) {
                        ret_addr = strtoul(argv[3], ((void*)0), 0);
                }
        }

        if ((fp = fopen(argv[1], "wb")) == ((void*)0)) {
                printf("Error creating file: %s\n", argv[1]);
                return -1;
        }

        construct_document(fp, ret_addr);

        printf("Created document %s with return address [0x%x]\n", argv[1], ret_addr);

        return 0;
}
